[gd_scene load_steps=2 format=2]

[ext_resource path="res://AttackRangeZone.gd" type="Script" id=1]

[node name="AttackRangeZone" type="Node2D"]
script = ExtResource( 1 )

[node name="EnabledZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnabledZone"]
modulate = Color( 1, 1, 1, 0.286275 )

[node name="DisabledZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DisabledZone"]
modulate = Color( 1, 1, 1, 0.278431 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="body_entered" from="EnabledZone" to="." method="_on_EnabledZone_body_entered"]
[connection signal="body_exited" from="EnabledZone" to="." method="_on_EnabledZone_body_exited"]
[connection signal="body_entered" from="DisabledZone" to="." method="_on_DisabledZone_body_entered"]
[connection signal="body_exited" from="DisabledZone" to="." method="_on_DisabledZone_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
